--- a/Payment/view/adminhtml/templates/system/config/fieldset/header.phtml
+++ b/Payment/view/adminhtml/templates/system/config/fieldset/header.phtml
@@ -10,14 +10,14 @@ declare(strict_types=1);
 <div class="mm-block-ginger">
     <a class="helpbutton" target="_blank"></a>
     <p>
-        <?= $block->escapeHtml(__('XPATE helps entrepreneurs with the best, smartest and most efficient payment systxpate.')) ?>
+        <?= $block->escapeHtml(__('XPATE helps entrepreneurs with the best, smartest and most efficient payment systems.')) ?>
     </p>
     <table>
         <tbody>
             <tr>
                 <td>
-                    <div class="icon1"></div>
-                    <?= $block->escapeHtml(__('Visit xpatepay.eu')) ?>
+                    <div</div>
+                    <?= $block->escapeHtml(__('Visit xpate.com')) ?>
                 </td>
             </tr>
         </tbody>
