Some minor change

--- a/view/adminhtml/templates/system/config/fieldset/header.phtml
+++ b/view/adminhtml/templates/system/config/fieldset/header.phtml
@@ -8,16 +8,14 @@ declare(strict_types=1);
  */
 ?>
 <div class="mm-block-ginger">
-    <a class="helpbutton" target="_blank"></a>
     <p>
-        <?= $block->escapeHtml(__('XPATE helps entrepreneurs with the best, smartest and most efficient payment systxpate.')) ?>
+        <?= $block->escapeHtml(__('Xpate is a payments platform for e-commerce businesses that helps with cashflow problem.')) ?>
     </p>
     <table>
         <tbody>
             <tr>
                 <td>
-                    <div class="icon1"></div>
-                    <?= $block->escapeHtml(__('Visit xpatepay.eu')) ?>
+                    <?= $block->escapeHtml(__('Visit https://xpate.com/')) ?>
                 </td>
             </tr>
         </tbody>
