--- a/view/adminhtml/templates/system/config/fieldset/header.phtml
+++ b/view/adminhtml/templates/system/config/fieldset/header.phtml
@@ -15,7 +15,7 @@ declare(strict_types=1);
         <tbody>
             <tr>
                 <td>
-                    <?= $block->escapeHtml(__('Visit https://xpate.com/')) ?>
+                    <?= $block->escapeHtml(__('Visit xpate.com')) ?>
                 </td>
             </tr>
         </tbody>
